--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     </div>
                     <br>
                     <div>
-                        <a href="https://github.com/VaishnaviBhat5/Door-Locking-System" target="_blank" class="project-link">Watch Project on GitHub Now</a>
+                        <a href="https://github.com/G4016" target="_blank" class="project-link">Watch Project on GitHub Now</a>
                     </div>
                 </li>
                 <li class="project-item">
