--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header class="hero">
         <h1>Hello, I am Ganesh Naik</h1>
         <h2>Computer Science Engineer</h2>
-        <p>Ready to debug challenges and deploy impactful solutions</p>
+        <p><i>~Ready to debug challenges and deploy impactful solutions~</i></p>
     </header>
 
     <main class="section">
