--- a/index.html
+++ b/index.html
@@ -439,19 +439,19 @@
                 </div>
                 <div class="business-case-item">
                     <span class="business-case-number">7</span>
-                    <img src="https://media.giphy.com/media/3o7btPCcdNniyf0ArS/giphy.gif" alt="Business Case 7 GIF">
+                    <img src="videos/bc8.gif" alt="Business Case 7 GIF">
                     <p class="business-case-desc">Audio and Subtitles Switching</p>
                     <a href="business-case7.html" class="business-case-link">Watch Now</a>
                 </div>
                 <div class="business-case-item">
                     <span class="business-case-number">8</span>
-                    <img src="https://media.giphy.com/media/l0Iyl55kTeh71nTWw/giphy.gif" alt="Business Case 8 GIF">
+                    <img src="videos/screen.gif" alt="Business Case 8 GIF">
                     <p class="business-case-desc">Screen Lock Feature</p>
                     <a href="business-case8.html" class="business-case-link">Watch Now</a>
                 </div>
                 <div class="business-case-item">
                     <span class="business-case-number">9</span>
-                    <img src="https://media.giphy.com/media/26ufnwz3wDUli7GU0/giphy.gif" alt="Business Case 9 GIF">
+                    <img src="images/smart.jpg" alt="Business Case 9 GIF">
                     <p class="business-case-desc">Smart Downloads</p>
                     <a href="business-case9.html" class="business-case-link">Watch Now</a>
                 </div>
