--- a/index.html
+++ b/index.html
@@ -360,37 +360,37 @@
                 
                 <div class="project-item">
                     <span class="project-number">1</span>
-                    <img src="videos\LRP_project1.gif" alt="Project 1 GIF">
+                    <img src="LRP_project1.gif" alt="Project 1 GIF">
                     <p class="project-desc">Classifying Brain MRI Images using Layer-wise Relevance Propagation and ResNet18.</p>
                     <a href="project1.html" class="project-link">Watch Now</a>
                 </div>
                 <div class="project-item">
                     <span class="project-number">2</span>
-                    <img src="videos/project2.gif" alt="Project 2 GIF">
+                    <img src="project2.gif" alt="Project 2 GIF">
                     <p class="project-desc">Archaeological Image Restoration using U-Net-based GAN.</p>
                     <a href="project2.html" class="project-link">Watch Now</a>
                 </div>
                 <div class="project-item">
                     <span class="project-number">3</span>
-                    <img src="videos/project3.gif" alt="Project 3 GIF">
+                    <img src="project3.gif" alt="Project 3 GIF">
                     <p class="project-desc">Prompt to Perfection</p>
                     <a href="project3.html" class="project-link">Watch Now</a>
                 </div>
                 <div class="project-item">
                     <span class="project-number">4</span>
-                    <img src="videos/project4.gif" alt="Project 6 GIF">
+                    <img src="project4.gif" alt="Project 6 GIF">
                     <p class="project-desc"> SymptoScan </p>
                     <a href="project4.html" class="project-link">Watch Now</a>
                 </div>
                 <div class="project-item">
                     <span class="project-number">5</span>
-                    <img src="videos/project5.gif" alt="Project 4 GIF">
+                    <img src="project5.gif" alt="Project 4 GIF">
                     <p class="project-desc"> SNE : Sabka Neta Ek </p>
                     <a href="project4.html" class="project-link">Watch Now</a>
                 </div>
                 <div class="project-item">
                     <span class="project-number">6</span>
-                    <img src="videos\project6.gif" alt="Project 5 GIF">
+                    <img src="project6.gif" alt="Project 5 GIF">
                     <p class="project-desc">Yellove Bus Booking Assistant</p>
                     <a href="project5.html" class="project-link">Watch Now</a>
                 </div>
@@ -403,61 +403,61 @@
             <div class="business-case-grid">
                 <div class="business-case-item">
                     <span class="business-case-number">1</span>
-                    <img src="videos/bc1.gif" alt="Business Case 1 GIF">
+                    <img src="bc1.gif" alt="Business Case 1 GIF">
                     <p class="business-case-desc">Top 10 Movies in India</p>
                     <a href="business-case1.html" class="business-case-link">Watch Now</a>
                 </div>
                 <div class="business-case-item">
                     <span class="business-case-number">2</span>
-                    <img src="videos/bc2.gif" alt="Business Case 2 GIF">
+                    <img src="bc2.gif" alt="Business Case 2 GIF">
                     <p class="business-case-desc"> Recommended TV Shows and Movies </p>
                     <a href="business-case2.html" class="business-case-link">Watch Now</a>
                 </div>
                 <div class="business-case-item">
                     <span class="business-case-number">3</span>
-                    <img src="videos/bc3.gif" alt="Business Case 3 GIF">
+                    <img src="bc3.gif" alt="Business Case 3 GIF">
                     <p class="business-case-desc"> Anime, Romantic, Kdrama, TV Sci-Fi Content Categorization </p>
                     <a href="business-case3.html" class="business-case-link">Watch Now</a>
                 </div>
                 <div class="business-case-item">
                     <span class="business-case-number">4</span>
-                    <img src="videos/bc4.gif" alt="Business Case 4 GIF">
+                    <img src="bc4.gif" alt="Business Case 4 GIF">
                     <p class="business-case-desc"> Series Episode and Season Management </p>
                     <a href="business-case4.html" class="business-case-link">Watch Now</a>
                 </div>
                 <div class="business-case-item">
                     <span class="business-case-number">5</span>
-                    <img src="images/moments.jpg" alt="Business Case 5 GIF">
+                    <img src="moments.jpg" alt="Business Case 5 GIF">
                     <p class="business-case-desc">Moments Feature with Bookmarking</p>
                     <a href="business-case5.html" class="business-case-link">Watch Now</a>
                 </div>
                 <div class="business-case-item">
                     <span class="business-case-number">6</span>
-                    <img src="videos/speed.gif" alt="Business Case 6 GIF">
+                    <img src="speed.gif" alt="Business Case 6 GIF">
                     <p class="business-case-desc">Playback Speed Adjustment</p>
                     <a href="business-case6.html" class="business-case-link">Watch Now</a>
                 </div>
                 <div class="business-case-item">
                     <span class="business-case-number">7</span>
-                    <img src="videos/bc8.gif" alt="Business Case 7 GIF">
+                    <img src="bc8.gif" alt="Business Case 7 GIF">
                     <p class="business-case-desc">Audio and Subtitles Switching</p>
                     <a href="business-case7.html" class="business-case-link">Watch Now</a>
                 </div>
                 <div class="business-case-item">
                     <span class="business-case-number">8</span>
-                    <img src="videos/screen.gif" alt="Business Case 8 GIF">
+                    <img src="screen.gif" alt="Business Case 8 GIF">
                     <p class="business-case-desc">Screen Lock Feature</p>
                     <a href="business-case8.html" class="business-case-link">Watch Now</a>
                 </div>
                 <div class="business-case-item">
                     <span class="business-case-number">9</span>
-                    <img src="images/smart.jpg" alt="Business Case 9 GIF">
+                    <img src="smart.jpg" alt="Business Case 9 GIF">
                     <p class="business-case-desc">Smart Downloads</p>
                     <a href="business-case9.html" class="business-case-link">Watch Now</a>
                 </div>
                 <div class="business-case-item">
                     <span class="business-case-number">10</span>
-                    <img src="videos/bc10.gif" alt="Business Case 10 GIF">
+                    <img src="bc10.gif" alt="Business Case 10 GIF">
                     <p class="business-case-desc">New and Hot Notifications</p>
                     <a href="business-case10.html" class="business-case-link">Watch Now</a>
                 </div>
