--- a/business-case1.html
+++ b/business-case1.html
@@ -200,7 +200,7 @@
         <h2>Top 10 TV Shows in India</h2>
         <div class="business-case-item">
             <h3 class="business-case-title">What is the feature about?</h3>
-            <img src="videos/bc1.gif" alt="Business Case 1 GIF">
+            <img src="bc1.gif" alt="Business Case 1 GIF">
             <p class="business-case-desc">Imagine watching or recommending a show that has been watched and loved by most of the people in your nation. Rather than scrolling the IDMB ratings of each movie, you get a list of Top 10 movies in India. To actually know it better we understand its not just a list but a gateway to keep people hooked by showing what's trending without endless searching.</p>
         </div>
         <div class="business-case-item">
