--- a/business-case2.html
+++ b/business-case2.html
@@ -200,7 +200,7 @@
         <h2>Recommended TV Shows and Movies</h2>
         <div class="business-case-item">
             <h3 class="business-case-title">What is the feature about?</h3>
-            <img src="videos/bc2.gif" alt="Recommended Shows and Movies GIF">
+            <img src="bc2.gif" alt="Recommended Shows and Movies GIF">
             <p class="business-case-desc">Imagine you have a friend who handpick's the best series and movies obviously of your interests. Netflix’s recommendation system does exactly that, suggesting gems like “Sacred Games” or “Squid Games” based on your viewing habits. It’s not just a list, it’s a personalized gateway to keep you glued to the platform, cutting through the noise of endless scrolling.</p>
         </div>
         <div class="business-case-item">
@@ -345,7 +345,7 @@ int main() {
         <div class="business-case-item">
             <h3 class="business-case-title">Visualization (Models and Figures)</h3>
             <p class="business-case-desc">Think of the K-D Tree as a map where each show is a pin dropped in a multidimensional city. “Sacred Games” sits near “Mirzapur” because they share gritty crime drama vibes, while “Kota Factory” is farther away in the quiet suburb of educational shows. The tree splits this space along axes like genre or runtime, making it easy to find the closest pins to your taste. User data watch history, ratings gets mapped to a point, and the K-D Tree quickly pulls the nearest titles. Redis caches these results, serving them instantly to your homepage via an API.</p>
-            <img src="images/kd_tree_design.png" alt="Business Case 1 GIF">
+            <img src="kd_tree_design.png" alt="Business Case 1 GIF">
             <a href="reference.html" class="nav-arrow">[4]</a>
         </div>
         <div class="business-case-item">
