--- a/business-case1.html
+++ b/business-case1.html
@@ -292,7 +292,7 @@ if __name__ == "__main__":
         <div class="business-case-item">
             <h3 class="business-case-title">Visualization (Models and Figures)</h3>
             <p class="business-case-desc">This tree keeps Jatt at the top because it has the highest score, followed by Hit Case 3 and Retro. The heap ensures we can quickly pull the top 10 shows, even from thousands of titles. The data flows like this: user views and searches feed into a scoring system, the heap ranks them, and Redis serves the list to the homepage via an API.</p>
-            <img src="images/max-heap.png" alt="Business Case 1 GIF">
+            <img src="max-heap.png" alt="Business Case 1 GIF">
         </div>
         <div class="business-case-item">
             <h3 class="business-case-title">Efficiency Analysis</h3>
