--- a/business-case3.html
+++ b/business-case3.html
@@ -200,7 +200,7 @@
         <h2>Anime, Romantic, Kdrama, TV Sci-Fi Content Categorization</h2>
         <div class="business-case-item">
             <h3 class="business-case-title">What is the feature about?</h3>
-            <img src="videos/bc3.gif" alt="Content Categorization GIF">
+            <img src="bc3.gif" alt="Content Categorization GIF">
             <p class="business-case-desc">Ever wondered how Netflix knows to slot “Naruto” into Anime or “When Life gives you Tangerines” into Kdrama? The content categorization feature is the brain behind organizing Netflix’s vast library into genres like Anime, Romantic, Kdrama, and Sci-Fi TV. It’s not just about labels, it’s a roadmap that guides users straight to their favorite niches, making the platform feel like a tailored treasure hunt.</p>
         </div>
         <div class="business-case-item">
@@ -286,7 +286,7 @@ print("Predicted genre for [1, 0, 0]:", classifier.predict([1, 0, 0]))
         <div class="business-case-item">
             <h3 class="business-case-title">Visualization (Models and Figures)</h3>
             <p class="business-case-desc">Picture the Decision Tree as a flowchart guiding each title to its genre home. At the root, it might ask, “Is the show animated?” If yes, it branches toward Anime; if no, it checks, “Is the cast Korean?” leading to Kdrama or elsewhere. Each leaf node holds a genre label, like TV Sci-Fi for “The Expanse.” Metadata feeds into the tree, which classifies titles swiftly, and a database caches these tags for instant retrieval when users browse genres on Netflix’s homepage.</p>
-            <img src="images/Decision_tree.png" alt="Business Case 1 GIF">
+            <img src="Decision_tree.png" alt="Business Case 1 GIF">
         </div>
         <div class="business-case-item">
             <h3 class="business-case-title">Efficiency Analysis</h3>
