--- a/business-case4.html
+++ b/business-case4.html
@@ -200,7 +200,7 @@
         <h2> Series Episode and Season Management </h2>
         <div class="business-case-item">
             <h3 class="business-case-title">What is the Feature About?</h3>
-            <img src="videos/bc4.gif" alt="Episode Management GIF">
+            <img src="bc4.gif" alt="Episode Management GIF">
             <p class="business-case-desc">Ever notice how Netflix makes binge watching feel effortless? One episode of Stranger Things ends, and the next one cues up like clockwork. That’s the Series Episode and Season Management feature at play, orchestrating smooth transitions across episodes and seasons for shows like The Witcher or Sacred Games. It’s not just playback, it’s a navigation masterpiece that keeps you immersed in the story, no interruptions needed.</p>
         </div>
         <div class="business-case-item">
