--- a/business-case5.html
+++ b/business-case5.html
@@ -200,7 +200,7 @@
         <h2>Moments Feature with Bookmarking</h2>
         <div class="business-case-item">
             <h3 class="business-case-title">What is the Feature About?</h3>
-            <img src="images/moments.jpg" alt="Moments Bookmarking GIF">
+            <img src="moments.jpg" alt="Moments Bookmarking GIF">
             <p class="business-case-desc">Imagine watching Sacred Games and wanting to revisit Nawazuddin Siddiqui’s iconic scene later. Netflix’s Moments feature lets you bookmark specific scenes in shows or movies, like that heart-pounding chase in Money Heist or a tearjerker moment in Panchayat. It’s not just a bookmark, it’s a time machine that takes you back to your favorite moments instantly, enhancing your viewing experience with precision and ease.</p>
         </div>
         <div class="business-case-item">
