--- a/business-case6.html
+++ b/business-case6.html
@@ -200,7 +200,7 @@
             <h2>Playback Speed Adjustment</h2>
             <div class="business-case-item">
                 <h3 class="business-case-title">What is the Feature About?</h3>
-                <img src="videos/speed.gif" alt="Playback Speed Adjustment GIF">
+                <img src="speed.gif" alt="Playback Speed Adjustment GIF">
                 <p class="business-case-desc">Ever wanted to race through a Panchayat recap at 2x speed or savor a Vincenzo romance at 0.75x? Netflix’s Playback Speed Adjustment feature lets you tweak the viewing speed of any show or movie, from 0.5x to 2x, tailoring your experience to your mood or schedule. It’s not just a slider—it’s your control panel for customizing how you consume Sacred Games or Stranger Things, making every second count.</p>
             </div>
             <div class="business-case-item">
