--- a/business-case7.html
+++ b/business-case7.html
@@ -200,7 +200,7 @@
         <h2>Audio and Subtitles Switching</h2>
         <div class="business-case-item">
             <h3 class="business-case-title">What is the Feature About?</h3>
-            <img src="https://via.placeholder.com/600x300?text=Audio+and+Subtitles+Switching" alt="Audio and Subtitles Switching GIF">
+            <img src="bc8.gif" alt="Business Case 7 GIF">
             <p class="business-case-desc">Picture watching *Money Heist* in Spanish but switching to Hindi audio mid-scene, or adding Tamil subtitles to *Crash Landing on You* for clarity. Netflix’s Audio and Subtitles Switching feature lets you change languages or subtitle tracks on the fly, tailoring your experience to your preferences. It’s not just a menu—it’s a gateway to enjoying *Sacred Games* or *The Witcher* in your language of choice, making every moment accessible and immersive.</p>
         </div>
         <div class="business-case-item">
