--- a/business-case8.html
+++ b/business-case8.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Business Case 8: Screen Lock Feature | Netflix Analytics</title>
+    <title>Business Case 8 | GANESH NAIK </title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -200,7 +200,7 @@
         <h2>Screen Lock Feature</h2>
         <div class="business-case-item">
             <h3 class="business-case-title">What is the Feature About?</h3>
-            <img src="videos/screen.gif" alt="Screen Lock Feature GIF">
+            <img src="screen.gif" alt="Screen Lock Feature GIF">
             <p class="business-case-desc">Ever accidentally paused *Money Heist* during a tense heist or skipped a *Panchayat* scene while grabbing snacks? Netflix’s Screen Lock feature lets you lock the playback interface, disabling controls to prevent unwanted interruptions. It’s not just a button—it’s your shield for staying immersed in *Sacred Games* or *Stranger Things*, ensuring a distraction-free binge-watching experience.</p>
         </div>
         <div class="business-case-item">
