--- a/business-case9.html
+++ b/business-case9.html
@@ -200,7 +200,7 @@
         <h2>Smart Downloads</h2>
         <div class="business-case-item">
             <h3 class="business-case-title">What is the Feature About?</h3>
-            <img src="images/smart.jpg" alt="Smart Downloads GIF">
+            <img src="smart.jpg" alt="Smart Downloads GIF">
             <p class="business-case-desc">Imagine boarding a train with no Wi-Fi, yet *Panchayat*’s next episode is ready to watch offline. Netflix’s Smart Downloads feature automatically downloads episodes or movies like *Sacred Games* or *Vincenzo* based on your viewing habits, managing storage and prioritizing content you’re likely to watch next. It’s not just a download—it’s your personal offline curator, ensuring uninterrupted viewing wherever you are.</p>
         </div>
         <div class="business-case-item">
