--- a/business-case10.html
+++ b/business-case10.html
@@ -200,7 +200,7 @@
         <h2>New and Hot Notifications</h2>
         <div class="business-case-item">
             <h3 class="business-case-title">What is the Feature About?</h3>
-            <img src="videos/bc10.gif" alt="New and Hot Notifications GIF">
+            <img src="bc10.gif" alt="New and Hot Notifications GIF">
             <p class="business-case-desc">Ever get a ping about *Panchayat*’s new season or *Money Heist* trending worldwide? Netflix’s New and Hot Notifications feature alerts you to fresh releases and trending titles like *Vincenzo* or *Sacred Games*, delivered via push notifications or in-app banners. It’s not just a nudge—it’s your guide to what’s buzzing, ensuring you never miss the next big hit in Netflix’s ever-growing catalog.</p>
         </div>
         <div class="business-case-item">
